@@ -9,3 +9,9 @@
 /* Define if you need GNU extentions.  */
 #undef _GNU_SOURCE
 
+/* Define if WM_COMMAND should be set for the main window.  */
+#undef SESSION
+
+/* Define if WM_TRANSIENT_FOR should be set for the dialog boxes.  */
+#undef ENABLE_TRANSIENT_FOR_HINT
+
